[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/classes/hitboxComponent/hitboxComponent.gd" type="Script" id=1]
[ext_resource path="res://objects/destrutiveBlocks/normal/16x16/block16.png" type="Texture" id=2]
[ext_resource path="res://objects/destrutiveBlocks/normal/destrutiveBlock.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="block" type="KinematicBody2D" groups=["destrutive"]]
script = ExtResource( 3 )
particlesAmount = 1

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 1.43051e-06, -16 )
scale = Vector2( 1.6, 1.6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["destrutive"]]
position = Vector2( 0, -16 )
shape = SubResource( 1 )
disabled = true

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2( 0, -16 )
shape = SubResource( 2 )
disabled = true

[node name="sprite" type="Sprite" parent="."]
unique_name_in_owner = true
position = Vector2( 0, -16 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 2

[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
[connection signal="HitboxDamaged" from="HitboxComponent" to="." method="_on_HitboxComponent_HitboxDamaged"]
